<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingTop="20dp"
    tools:context=".AnswerByGptActivity">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@drawable/backicon"
            android:clickable="true"
            android:contentDescription="Go back"
            android:focusable="auto"
            android:foreground="?android:attr/selectableItemBackground" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="피부질환 진단 결과"
            android:textSize="28sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="280dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:src="@drawable/placeholder_image2"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/diseaseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="예측병명"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/diseaseNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:ems="10"
            android:gravity="center"

            android:text="예측중입니다...."
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/diagonistDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="예측일자"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/diagonistDateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:text="0000-00-00"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Proability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  가능성  "
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/ProabilityText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:text="계산중입니다..."
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_ai_diagnosis"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/btn"
            android:text="@string/ai_diagnosis"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_post_qna"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:backgroundTint="@color/btn"
            android:text="@string/post_qna"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_return_home"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/return_home"
        android:textColor="@color/btn"
        android:textSize="16sp"
        tools:ignore="MissingConstraints" />


</LinearLayout>